- Leadership was capped at 60 even if it was a primary or secondary skill. Fixed. - Updated the skillcap function to check for the new skills. - Corrected the name for Elven Pants. - Removed a redundant check in ship deeds. - Henchmen weren't displaying their paperdoll on double click. Fixed. - Began preparations to the npc setup scripts for spawning elven and gargish merchants and townfolk.

--- a/099/pkg/attributes/config/attributes.cfg
+++ b/099/pkg/attributes/config/attributes.cfg
@@ -15,7 +15,7 @@ Attribute Dexterity
 
 Attribute Alchemy
 {
-//	script :alchemy:tasteid
+	script :alchemy:tasteid
 }
 
 Attribute Anatomy
@@ -67,7 +67,6 @@ Attribute DetectHidden
 Attribute Leadership
 {
 	Alias Begging
-	Alias Herding
 	script :taunt:taunt
 }
 
@@ -265,9 +264,9 @@ Attribute ForensicEvaluation
 {
 	script			:detecthidden:detecthidden
 }
-//Attribute Herding
-//{
-//}
+Attribute Herding
+{
+}
 Attribute Snooping
 {
 }
