--- a/trunk/099/pkg/attributes/config/attributes.cfg
+++ b/trunk/099/pkg/attributes/config/attributes.cfg
@@ -15,7 +15,7 @@ Attribute Dexterity
 
 Attribute Alchemy
 {
-//	script :alchemy:tasteid
+	script :alchemy:tasteid
 }
 
 Attribute Anatomy
@@ -67,7 +67,6 @@ Attribute DetectHidden
 Attribute Leadership
 {
 	Alias Begging
-	Alias Herding
 	script :taunt:taunt
 }
 
@@ -265,9 +264,9 @@ Attribute ForensicEvaluation
 {
 	script			:detecthidden:detecthidden
 }
-//Attribute Herding
-//{
-//}
+Attribute Herding
+{
+}
 Attribute Snooping
 {
 }
