--- a/trunk/099/config/golocs.cfg
+++ b/trunk/099/config/golocs.cfg
@@ -25,6 +25,7 @@ goloc masterlist
 	location seamarket
 
 	location PAGEBREAK
+	location verlorreg
 	location luna
 	location umbra
 	location zento
@@ -366,6 +367,15 @@ goloc all valor
 	x	2492
 	y	3931
 	z	5
+}
+
+goloc all verlorreg
+{
+	desc	Ver Lor Reg
+	x	836
+	y	641
+	z	-20
+	realm ilshenar
 }
 
 goloc all luna
