--- a/trunk/099/pkg/npcs/names.cfg
+++ b/trunk/099/pkg/npcs/names.cfg
@@ -6101,3 +6101,822 @@ Names 12
         Name213         Wikchichoki
         Name214         Wochickeki
 }
+
+Names 13
+{
+	Count	187
+	Name1	Aki
+	Name2	Akihiko
+	Name3	Akihiro
+	Name4	Akio
+	Name5	Akira
+	Name6	Aoi
+	Name7	Arata
+	Name8	Atsushi
+	Name9	Dai
+	Name10	Daichi
+	Name11	Daiki
+	Name12	Daisuke
+	Name13	Eiji
+	Name14	Fumio
+	Name15	Goro
+	Name16	Gorou
+	Name17	Hachiro
+	Name18	Hajime
+	Name19	Haru
+	Name20	Haruo
+	Name21	Hideaki
+	Name22	Hideki
+	Name23	Hideo
+	Name24	Hikaru
+	Name25	Hiro
+	Name26	Hiroaki
+	Name27	Hiroki
+	Name28	Hiroshi
+	Name29	Hiroyuki
+	Name30	Hisao
+	Name31	Hisashi
+	Name32	Hisoka
+	Name33	Hitoshi
+	Name34	Hotaka
+	Name35	Ichiro
+	Name36	Ichirou
+	Name37	Isamu
+	Name38	Isao
+	Name39	Iwao
+	Name40	Izanagi
+	Name41	Jiro
+	Name42	Jirou
+	Name43	Jun
+	Name44	Junichi
+	Name45	Juro
+	Name46	Jurou
+	Name47	Kaede
+	Name48	Katashi
+	Name49	Katsu
+	Name50	Katsumi
+	Name51	Katsuo
+	Name52	Katsuro
+	Name53	Kazuhiko
+	Name54	Kazuhiro
+	Name55	Kazuki
+	Name56	Kazuo
+	Name57	Kei
+	Name58	Keiichi
+	Name59	Keiji
+	Name60	Ken
+	Name61	Ken'ichi
+	Name62	Kenji
+	Name63	Kenshin
+	Name64	Kenta
+	Name65	Kichiro
+	Name66	Kichirou
+	Name67	Kin
+	Name68	Kioshi
+	Name69	Kiyoshi
+	Name70	Ko
+	Name71	Kohaku
+	Name72	Koichi
+	Name73	Koji
+	Name74	Kou
+	Name75	Kunio
+	Name76	Kuro
+	Name77	Kurou
+	Name78	Kyo
+	Name79	Kyou
+	Name80	Madoka
+	Name81	Makoto
+	Name82	Mamoru
+	Name83	Manabu
+	Name84	Masa
+	Name85	Masaaki
+	Name86	Masahiko
+	Name87	Masahiro
+	Name88	Masaki
+	Name89	Masanori
+	Name90	Masao
+	Name91	Masaru
+	Name92	Masashi
+	Name93	Masato
+	Name94	Masayoshi
+	Name95	Masayuki
+	Name96	Masumi
+	Name97	Michi
+	Name98	Michio
+	Name99	Mikio
+	Name100	Minori
+	Name101	Minoru
+	Name102	Mitsuo
+	Name103	Mitsuru
+	Name104	Nao
+	Name105	Naoki
+	Name106	Noboru
+	Name107	Nobu
+	Name108	Nobuo
+	Name109	Nobuyuki
+	Name110	Nori
+	Name111	Noryo
+	Name112	Orochi
+	Name113	Osamu
+	Name114	Raiden
+	Name115	Rokuro
+	Name116	Ryo
+	Name117	Ryota
+	Name118	Ryuu
+	Name119	Saburo
+	Name120	Sadao
+	Name121	Satoru
+	Name122	Satoshi
+	Name123	Seiichi
+	Name124	Seiji
+	Name125	Shichiro
+	Name126	Shingo
+	Name127	Shigeo
+	Name128	Shigeru
+	Name129	Shin
+	Name130	Shin'ichi
+	Name131	Shinji
+	Name132	Shiro
+	Name133	Sho
+	Name134	Shoichi
+	Name135	Shoji
+	Name136	Shou
+	Name137	Shuichi
+	Name138	Shuji
+	Name139	Sora
+	Name140	Susumu
+	Name141	Tadao
+	Name142	Tadashi
+	Name143	Takahiro
+	Name144	Takao
+	Name145	Takashi
+	Name146	Takayuki
+	Name147	Takehiko
+	Name148	Takeo
+	Name149	Takeshi
+	Name150	Takumi
+	Name151	Tamotsu
+	Name152	Taro
+	Name153	Tatsuo
+	Name154	Tatsuya
+	Name155	Teruo
+	Name156	Tetsuo
+	Name157	Tetsuya
+	Name158	Tomio
+	Name159	Toru
+	Name160	Toshi
+	Name161	Toshiaki
+	Name162	Toshio
+	Name163	Toshiyuki
+	Name164	Tsuneo
+	Name165	Tsutomu
+	Name166	Tsuyoshi
+	Name167	Yasuhiro
+	Name168	Yasuo
+	Name169	Yasushi
+	Name170	Yoichi
+	Name171	Yori
+	Name172	Yoshi
+	Name173	Yoshiaki
+	Name174	Yoshihiro
+	Name175	Yoshikazu
+	Name176	Yoshinori
+	Name177	Yoshio
+	Name178	Yoshiro
+	Name179	Yoshito
+	Name180	Yoshiyuki
+	Name181	Yuichi
+	Name182	Yuji
+	Name183	Yuki
+	Name184	Yukio
+	Name185	Yutaka
+	Name186	Yuu
+	Name187	Yuudai
+
+}
+
+Names 14
+{
+	Count	198
+	Name1	Ai
+	Name2	Aika
+	Name3	Aiko
+	Name4	Aimi
+	Name5	Akane
+	Name6	Akemi
+	Name7	Aki
+	Name8	Akiko
+	Name9	Akira
+	Name10	Amaterasu
+	Name11	Amaya
+	Name12	Aoi
+	Name13	Arisu
+	Name14	Asami
+	Name15	Asuka
+	Name16	Atsuko
+	Name17	Avaron
+	Name18	Aya
+	Name19	Ayaka
+	Name20	Ayako
+	Name21	Ayame
+	Name22	Ayano
+	Name23	Ayumi
+	Name24	Azumi
+	Name25	Bunko
+	Name26	Chiasa
+	Name27	Chie
+	Name28	Chieko
+	Name29	Chiharu
+	Name30	Chika
+	Name31	Chikako
+	Name32	Chinatsu
+	Name33	Chiyo
+	Name34	Chiyoko
+	Name35	Cho
+	Name36	Chou
+	Name37	Eiko
+	Name38	Emi
+	Name39	Emiko
+	Name40	Eri
+	Name41	Etsuko
+	Name42	Fuji
+	Name43	Fumiko
+	Name44	Gina
+	Name45	Hana
+	Name46	Hanako
+	Name47	Haru
+	Name48	Haruka
+	Name49	Haruki
+	Name50	Haruko
+	Name51	Harumi
+	Name52	Hideko
+	Name53	Hikari
+	Name54	Hikaru
+	Name55	Hiro
+	Name56	Hiroko
+	Name57	Hiromi
+	Name58	Hisako
+	Name59	Hisoka
+	Name60	Hitomi
+	Name61	Hoshi
+	Name62	Hotaru
+	Name63	Izanami
+	Name64	Izumi
+	Name65	Jun
+	Name66	Junko
+	Name67	Kaede
+	Name68	Kame
+	Name69	Kameko
+	Name70	Kameyo
+	Name71	Kamiko
+	Name72	Kaori
+	Name73	Kaoru
+	Name74	Kasumi
+	Name75	Katsumi
+	Name76	Kayo
+	Name77	Kazue
+	Name78	Kazuko
+	Name79	Kazumi
+	Name80	Kei
+	Name81	Keiko
+	Name82	Kiku
+	Name83	Kimi
+	Name84	Kimiko
+	Name85	Kin
+	Name86	Kiyoko
+	Name87	Kiyomi
+	Name88	Ko
+	Name89	Kohaku
+	Name90	Kotone
+	Name91	Kou
+	Name92	Kumiko
+	Name93	Kyo
+	Name94	Kyoko
+	Name95	Kyou
+	Name96	Madoka
+	Name97	Mai
+	Name98	Maiko
+	Name99	Maki
+	Name100	Makoto
+	Name101	Mana
+	Name102	Manami
+	Name103	Mari
+	Name104	Mariko
+	Name105	Masa
+	Name106	Masako
+	Name107	Masami
+	Name108	Masumi
+	Name109	Masuyo
+	Name110	Mayumi
+	Name111	Megumi
+	Name112	Mi
+	Name113	Michi
+	Name114	Michiko
+	Name115	Midori
+	Name116	Mieko
+	Name117	Miho
+	Name118	Mika
+	Name119	Miki
+	Name120	Minako
+	Name121	Minori
+	Name122	Misaki
+	Name123	Mitsuko
+	Name124	Mitsuru
+	Name125	Miwa
+	Name126	Miyako
+	Name127	Miyoko
+	Name128	Miyuki
+	Name129	Mizuki
+	Name130	Moe
+	Name131	Momo
+	Name132	Momoe
+	Name133	Momoko
+	Name134	Moriko
+	Name135	Nana
+	Name136	Nao
+	Name137	Naoki
+	Name138	Naoko
+	Name139	Naomi
+	Name140	Natsuko
+	Name141	Natsumi
+	Name142	Nobuko
+	Name143	Nori
+	Name144	Noriko
+	Name145	Ran
+	Name146	Rei
+	Name147	Reiko
+	Name148	Ren
+	Name149	Rie
+	Name150	Rika
+	Name151	Riko
+	Name152	Rin
+	Name153	Ryo
+	Name154	Ryoko
+	Name155	Sachiko
+	Name156	Saki
+	Name157	Sakiko
+	Name158	Sakura
+	Name159	Sango
+	Name160	Sayuri
+	Name161	Setsuko
+	Name162	Shig
+	Name163	Shigeko
+	Name164	Shika
+	Name165	Shinju
+	Name166	Shiori
+	Name167	Shizuka
+	Name168	Shizuko
+	Name169	Sora
+	Name170	Sumiko
+	Name171	Susumu
+	Name172	Suzu
+	Name173	Suzume
+	Name174	Takako
+	Name175	Takara
+	Name176	Tamiko
+	Name177	Teruko
+	Name178	Tomiko
+	Name179	Tomoko
+	Name180	Toshiko
+	Name181	Tsukiko
+	Name182	Ume
+	Name183	Umeko
+	Name184	Usagi
+	Name185	Yasu
+	Name186	Yasuko
+	Name187	Yoko
+	Name188	Yori
+	Name189	Yoshi
+	Name190	Yoshie
+	Name191	Yoshiko
+	Name192	Yuka
+	Name193	Yuki
+	Name194	Yukiko
+	Name195	Yuko
+	Name196	Yumi
+	Name197	Yumiko
+	Name198	Yuriko
+
+}
+
+Names 15
+{
+	Count	200
+	Name1	Erutáron
+	Name2	Rhasscaunion
+	Name3	Balalaithdren
+	Name4	Gilthradas
+	Name5	Draugion
+	Name6	Taurdordon
+	Name7	Urúvdur
+	Name8	Lletheldorion
+	Name9	Tâlmaeon
+	Name10	Sidhion
+	Name11	Morlaerion
+	Name12	Glanron
+	Name13	Bregdhian
+	Name14	Daeron
+	Name15	Hirdan
+	Name16	Landapantan
+	Name17	Tanenil
+	Name18	Valenbarthon
+	Name19	Mátaritheth
+	Name20	Eirgolion
+	Name21	Arandil
+	Name22	Ormártan
+	Name23	Gilkanond
+	Name24	Tamentar
+	Name25	Mátadirthon
+	Name26	Tristherindoion
+	Name27	Lydur
+	Name28	Veryamelion
+	Name29	Alyadordhron
+	Name30	Randien
+	Name31	Eircauduil
+	Name32	Thomollion
+	Name33	Jarenion
+	Name34	Manyan
+	Name35	Maldur
+	Name36	Tawarthean
+	Name37	Tidurion
+	Name38	Elar
+	Name39	Belfinnen
+	Name40	Yalathârion
+	Name41	Dosrauthion
+	Name42	Manmon
+	Name43	Hothdir
+	Name44	Aranpanvorien
+	Name45	Eldor
+	Name46	Glennadhamdal
+	Name47	Airron
+	Name48	Daerônthor
+	Name49	Idheyion
+	Name50	Erynion
+	Name51	Thanlassond
+	Name52	Mariothion
+	Name53	Draugrauthon
+	Name54	Laireyonion
+	Name55	Habrisdur
+	Name56	Sidhmon
+	Name57	Aeohion
+	Name58	Rinalnaiien
+	Name59	Cauncaundon
+	Name60	Talthellennar
+	Name61	Tanion
+	Name62	Bellcarion
+	Name63	Cundmelion
+	Name64	Tâlgolen
+	Name65	Aenordorien
+	Name66	Menadhian
+	Name67	Emerien
+	Name68	Landaiadril
+	Name69	Emerian
+	Name70	Locien
+	Name71	Laniothil
+	Name72	Maethil
+	Name73	Nitholë
+	Name74	Aelion
+	Name75	Aulvantion
+	Name76	Alyacauthor
+	Name77	Aranron
+	Name78	Arthitar
+	Name79	Neastóle
+	Name80	Ovorrond
+	Name81	Eruvantron
+	Name82	Istgadcan
+	Name83	Sadron
+	Name84	Veleantdas
+	Name85	Megilbund
+	Name86	Draugdarien
+	Name87	Nenborn
+	Name88	Taenion
+	Name89	Tinordómon
+	Name90	Leaminaiion
+	Name91	Leapantdil
+	Name92	Tamtornen
+	Name93	Aulyonion
+	Name94	Erutáethon
+	Name95	Meldaglenien
+	Name96	Caunsireth
+	Name97	Tûrin
+	Name98	Eruthanion
+	Name99	Tûrin
+	Name100	Glendirdren
+	Name101	Tacaeien
+	Name102	Merithanthon
+	Name103	Rainilien
+	Name104	Agordirond
+	Name105	Limon
+	Name106	Erynrond
+	Name107	Laerthanond
+	Name108	Eglerdir
+	Name109	Laerdaugion
+	Name110	Tithfinien
+	Name111	Limion
+	Name112	Tûrin
+	Name113	Meridoron
+	Name114	Laiquafinddan
+	Name115	Cundnorndhron
+	Name116	Sidholë
+	Name117	Erumárion
+	Name118	Emerdion
+	Name119	Mormaeion
+	Name120	Taladerdorien
+	Name121	Valthelonnen
+	Name122	Istuion
+	Name123	Tamadion
+	Name124	Neurdur
+	Name125	Drasiron
+	Name126	Máthanion
+	Name127	Tharyonion
+	Name128	Roheradhamion
+	Name129	Côfohien
+	Name130	Tûrtherion
+	Name131	Suicaeien
+	Name132	Idhrenserdur
+	Name133	Taminaion
+	Name134	Eruandaeion
+	Name135	Eredhdil
+	Name136	Airion
+	Name137	Arnoion
+	Name138	Polenmelien
+	Name139	Elethon
+	Name140	Alaion
+	Name141	Daeron
+	Name142	Ehtwaiil
+	Name143	Gwepanuionien
+	Name144	Siohthor
+	Name145	Ordartur
+	Name146	Elranthor
+	Name147	Revrond
+	Name148	Indóion
+	Name149	Aranthal
+	Name150	Edencon
+	Name151	Sidhdauguth
+	Name152	Menabellaion
+	Name153	Draugdur
+	Name154	Garton
+	Name155	Immoron
+	Name156	Gleinadaeil
+	Name157	Tûrin
+	Name158	Útírradtur
+	Name159	Tanpanton
+	Name160	Galennonion
+	Name161	Rildur
+	Name162	Alyadaugduil
+	Name163	Tûrin
+	Name164	Celecon
+	Name165	Malis
+	Name166	Lairecaundad
+	Name167	Erulaitur
+	Name168	Neônon
+	Name169	Darmollion
+	Name170	Airgon
+	Name171	Tananean
+	Name172	Talcadornen
+	Name173	Polenenion
+	Name174	Daugien
+	Name175	Rithanon
+	Name176	Rûthil
+	Name177	Ariadede
+	Name178	Horthion
+	Name179	Falasônduil
+	Name180	Daerthârion
+	Name181	Castien
+	Name182	Verdur
+	Name183	Dûrdil
+	Name184	Caunkanien
+	Name185	Thargadede
+	Name186	Cerethonion
+	Name187	Mindirnaithon
+	Name188	Lairesirdien
+	Name189	Roherthanon
+	Name190	Alhil
+	Name191	Sidhdur
+	Name192	Eruaniothhon
+	Name193	Albaradon
+	Name194	Aphcaonien
+	Name195	Melauthdir
+	Name196	Eircaudas
+	Name197	Idhmaenûn
+	Name198	Suitarar
+	Name199	Tadhudond
+	Name200	Tanandon
+}
+
+Names 16
+{
+	Count	200
+	Name1	Errahinthea
+	Name2	Ainmelladwen
+	Name3	Ahthensinya
+	Name4	Altelwen
+	Name5	Raimana
+	Name6	Beldëmeldë
+	Name7	Esrahiniel
+	Name8	Minsathdeth
+	Name9	Mellinniel
+	Name10	Esaliel
+	Name11	Laurmelthiriel
+	Name12	Melsarthawen
+	Name13	Lúthmara
+	Name14	Limien
+	Name15	Ainmaiviel
+	Name16	Venalthea
+	Name17	Saermana
+	Name18	Mifainiel
+	Name19	Quanatheth
+	Name20	Turistiel
+	Name21	Alwen
+	Name22	Cralinnwen
+	Name23	Inwethiel
+	Name24	Buieruna
+	Name25	Anima
+	Name26	Glirwen
+	Name27	Sabarnel
+	Name28	Enafainiel
+	Name29	Solorlimwen
+	Name30	Earraniel
+	Name31	Alabeniel
+	Name32	Moréathiel
+	Name33	Eruiel
+	Name34	Melda
+	Name35	Cauniel
+	Name36	Tanna
+	Name37	Melarasinwen
+	Name38	Caunna
+	Name39	Gwestwen
+	Name40	Lothladna
+	Name41	Nilastiel
+	Name42	Erauriel
+	Name43	Vanfainiel
+	Name44	Temeliniel
+	Name45	Vanlanae
+	Name46	Eruima
+	Name47	Velasinwen
+	Name48	Enanathiel
+	Name49	Rosthentithiel
+	Name50	Rodiel
+	Name51	Menlathleryn
+	Name52	Filgainwen
+	Name53	Yathlairiel
+	Name54	Ithenesiel
+	Name55	Erdothiel
+	Name56	Lailathiel
+	Name57	Cralothiel
+	Name58	Veriswen
+	Name59	Ghiliel
+	Name60	Maemaiwen
+	Name61	Melladhiel
+	Name62	Minyaiel
+	Name63	Cauraiiel
+	Name64	Earmaiviel
+	Name65	Pandothwen
+	Name66	Cuilminacath
+	Name67	Raindirima
+	Name68	Faewethiel
+	Name69	Ereryniel
+	Name70	Erladhiel
+	Name71	Tanna
+	Name72	Erulaiya
+	Name73	Amaeliel
+	Name74	Tanna
+	Name75	Eruariel
+	Name76	Araiel
+	Name77	Ghileldë
+	Name78	Agnostiel
+	Name79	Tirnaththa
+	Name80	Morésidhwen
+	Name81	Marien
+	Name82	Alladhia
+	Name83	Peddethya
+	Name84	Glanenesiel
+	Name85	Enauialiel
+	Name86	Lona
+	Name87	Halamaivcath
+	Name88	Silien
+	Name89	Erivanwen
+	Name90	Esadhthae
+	Name91	Marilana
+	Name92	Anescassiel
+	Name93	Anbanniel
+	Name94	Aireima
+	Name95	Erbeniel
+	Name96	Eruwen
+	Name97	Andothwen
+	Name98	Rainerinthalasa
+	Name99	Berdolima
+	Name100	Menrinnwen
+	Name101	Velaladra
+	Name102	Mithialiel
+	Name103	Tirlothnyl
+	Name104	Aranima
+	Name105	Roserininya
+	Name106	Verisima
+	Name107	Caltharaiel
+	Name108	Saerna
+	Name109	Miriel
+	Name110	Mithethiel
+	Name111	Raenaewen
+	Name112	Eruiel
+	Name113	Noslariel
+	Name114	Esthiaiel
+	Name115	Minladhwen
+	Name116	Faemariiel
+	Name117	Islaiima
+	Name118	Galedethiel
+	Name119	Cuiluraiiel
+	Name120	Ismelëa
+	Name121	Silwen
+	Name122	Nesswen
+	Name123	Erudanna
+	Name124	Agtelna
+	Name125	Craeleiel
+	Name126	Vanthea
+	Name127	Turfindiel
+	Name128	Maeanadiriel
+	Name129	Faedranniel
+	Name130	Minudothsta
+	Name131	Agtôrra
+	Name132	Aliel
+	Name133	Nimrinnna
+	Name134	Saerima
+	Name135	Silivtimwen
+	Name136	Arauraiwen
+	Name137	Eswethda
+	Name138	Miriel
+	Name139	Minialwen
+	Name140	Alassë
+	Name141	Vensidhiel
+	Name142	Aerurainyl
+	Name143	Ialarwen
+	Name144	Mienesiel
+	Name145	Aralineth
+	Name146	Aralotiel
+	Name147	Araedra
+	Name148	Residhiel
+	Name149	Rainlairwen
+	Name150	Medyavwen
+	Name151	Raintheniadhwen
+	Name152	Tarrahinel
+	Name153	Lostmethia
+	Name154	Aerdiriel
+	Name155	Limotimiel
+	Name156	Calthathaiel
+	Name157	Iellmara
+	Name158	Cirethoniel
+	Name159	Mariel
+	Name160	Ainnostima
+	Name161	Vanalimaxa
+	Name162	Finliniel
+	Name163	Tarsuithae
+	Name164	Endëmima
+	Name165	Agtelwen
+	Name166	Rodwen
+	Name167	Gwethmeldirya
+	Name168	Sabaressë
+	Name169	Filwiliel
+	Name170	Nessanna
+	Name171	Tarrinniel
+	Name172	Melanna
+	Name173	Saiwethiel
+	Name174	Cadirrae
+	Name175	Laurtiadwen
+	Name176	Mirmana
+	Name177	Isthorel
+	Name178	Caunwen
+	Name179	Glaneruiel
+	Name180	Aranlansta
+	Name181	Melien
+	Name182	Medistwen
+	Name183	Adien
+	Name184	Fárgobeliel
+	Name185	Venialtha
+	Name186	Ithananniel
+	Name187	Maeredra
+	Name188	Caialthae
+	Name189	Ithuialwen
+	Name190	Caladiel
+	Name191	Gwestwen
+	Name192	Cratariel
+	Name193	Ghilna
+	Name194	Raina
+	Name195	Cadiliel
+	Name196	Faelathiel
+	Name197	Melialiel
+	Name198	Cireeruiel
+	Name199	Dauidrenthenniel
+	Name200	Tardoliel
+}
+
+Names 17
+{
+	Count 1
+	Name1	GargoyleMale
+}
+
+Names 18
+{
+	Count 1
+	Name1	GargoyleFemale
+}
