- Changed ringmail coif's blockcircle to 3, like the rest of the ringmail equipment. - Added Ver Lor Reg to the list of golocs.cfg. - Removed LOS checks from getprops dot command. - Added japanese and elven names to the NPC names lists. - Prepared the npc_setup.src script for Tokuno inhabitants and elves. - Added all the new mounts to the npc_setup.src script. - Updated npc_util.inc random name generator to detect if the human NPCs are being created in Tokuno, and use the japanese name list instead. - Added the elven hair colors to the barber scripts. - Fixed the ship captain and sailto scripts. They work again. - Updated objtype for the flute in bard.inc - Updated the inscription script for the new way POL handles the spellbooks. - Fixed the objtype change for totem repair kit in the tinkering script. - Fixed some mount types in the tamed.src script. - Some minor updates for tokuno, elves and gargoyles in dressme.src. Much to add yet. -

--- a/099/config/golocs.cfg
+++ b/099/config/golocs.cfg
@@ -25,6 +25,7 @@ goloc masterlist
 	location seamarket
 
 	location PAGEBREAK
+	location verlorreg
 	location luna
 	location umbra
 	location zento
@@ -366,6 +367,15 @@ goloc all valor
 	x	2492
 	y	3931
 	z	5
+}
+
+goloc all verlorreg
+{
+	desc	Ver Lor Reg
+	x	836
+	y	641
+	z	-20
+	realm ilshenar
 }
 
 goloc all luna
