--- a/trunk/099/config/itemdesc.cfg
+++ b/trunk/099/config/itemdesc.cfg
@@ -293,6 +293,7 @@ Item 0x0F8D
 Item 0x0F8E
 {
 	Name			SerpentScales
+	Desc			serpent scale
 	VendorSellsFor	6
 	VendorBuysFor	3
 	Weight		1/100
@@ -302,6 +303,7 @@ Item 0x0F8E
 Item 0x0F8F
 {
 	Name			VolcanicAsh
+	Desc			volcanic ash%es%
 	VendorSellsFor	6
 	VendorBuysFor	3
 	Weight		1/100
