--- a/trunk/099/pkg/skills/bardskills/musicianship/itemdesc.cfg
+++ b/trunk/099/pkg/skills/bardskills/musicianship/itemdesc.cfg
@@ -19,6 +19,9 @@ Item 0x0e9d
 	script		musicianship
 	succeed		0x53
 	fail			0x54
+	provocation	0x4b6
+	discordance	0x4b7
+	peacemaking	0x4b8
 	VendorSellsFor	21
 	VendorBuysFor	7
 }
@@ -29,6 +32,9 @@ Item 0x0e9e
 	script		musicianship
 	succeed		0x53
 	fail			0x54
+	provocation	0x4b6
+	discordance	0x4b7
+	peacemaking	0x4b8
 	VendorSellsFor	30
 	VendorBuysFor	10
 }
@@ -39,6 +45,9 @@ Item 0x0eb3
 	script		musicianship
 	succeed		0x4d
 	fail			0x4e
+	provocation	0x404
+	discordance	0x40c
+	peacemaking	0x419
 	VendorSellsFor	48
 	VendorBuysFor	16
 }
@@ -48,7 +57,10 @@ Item 0x0eb4
 	Name			Lute2
 	script		musicianship
 	succeed		0x4d
-	fail			0x45
+	fail			0x4e
+	provocation	0x404
+	discordance	0x40c
+	peacemaking	0x419
 	VendorSellsFor	48
 	VendorBuysFor	16
 }
@@ -59,6 +71,9 @@ Item 0x0e9c
 	script		musicianship
 	succeed		0x39
 	fail			0x3a
+	provocation	0x2e8
+	discordance	0x2e9
+	peacemaking	0x2ea
 	VendorSellsFor	61
 	VendorBuysFor	17
 }
@@ -79,6 +94,59 @@ Item 0x0eb1
 	script		musicianship
 	succeed		0x44
 	fail			0x45
+	provocation	0x392
+	discordance	0x393
+	peacemaking	0x394
 	VendorSellsFor	144
 	VendorBuysFor	48
 }
+
+Item 0x2805
+{
+	Name			bambooflute
+	script		musicianship
+	succeed		0x505
+	fail			0x504
+	VendorSellsFor	18
+	VendorBuysFor	6	
+}
+
+Item 0x2807
+{
+	Name			bambooflute2
+	script		musicianship
+	succeed		0x505
+	fail			0x504
+	VendorSellsFor	18
+	VendorBuysFor	6	
+}
+
+Item 0x403b
+{
+	Name			audchar
+	Desc			aud-char
+	script		musicianship
+	succeed		0x44
+	fail			0x45
+	provocation	0x392
+	discordance	0x393
+	peacemaking	0x394
+	VendorSellsFor	144
+	VendorBuysFor	48
+}
+
+Item 0x403c
+{
+	Name			audchar2
+	Desc			aud-char
+	script		musicianship
+	succeed		0x44
+	fail			0x45
+	provocation	0x392
+	discordance	0x393
+	peacemaking	0x394
+	VendorSellsFor	144
+	VendorBuysFor	48
+}
+
+
