- Tiledata from newer clients use the name Nox Crystal for the serpent scales, and Grave Dust for the volcanic ash. Both have been renamed on the server to show their old names. - Fixed typo in the skill name Discordance. Updated all files referencing it. - Added the bamboo flute and the aud-char to the bard instruments. - Added different musical tunes based on the barding action. There are now different sounds for simple instrument playing, provocation, discordance and peacemaking. This is only for both tamborines, lutes, drums, standing harps, and aud-chars. There are no such sounds for the other instruments in the client data files. - The new moongate system was not doing proper data cleanup. Fixed. - Added Throwing to the list of buffed/debuffed skills in Nature's Blessing/Curse druid spells. - Added the Discordance temporary mod. - Some objtype corrections in the script for bladed items. - Added support for the Discordance skill.

--- a/099/config/itemdesc.cfg
+++ b/099/config/itemdesc.cfg
@@ -293,6 +293,7 @@ Item 0x0F8D
 Item 0x0F8E
 {
 	Name			SerpentScales
+	Desc			serpent scale
 	VendorSellsFor	6
 	VendorBuysFor	3
 	Weight		1/100
@@ -302,6 +303,7 @@ Item 0x0F8E
 Item 0x0F8F
 {
 	Name			VolcanicAsh
+	Desc			volcanic ash%es%
 	VendorSellsFor	6
 	VendorBuysFor	3
 	Weight		1/100
