--- a/099/pkg/attributes/config/attributes.cfg
+++ b/099/pkg/attributes/config/attributes.cfg
@@ -70,9 +70,10 @@ Attribute Leadership
 	script :taunt:taunt
 }
 
-Attribute Dischordance
+Attribute Discordance
 {
 	Alias Enticement
+	script :discordance:discordance
 }
 
 Attribute Invocation
