--- a/099/pkg/skills/skillmaster.cfg
+++ b/099/pkg/skills/skillmaster.cfg
@@ -126,9 +126,9 @@ skill 14
 
 skill 15
 {
-	name Dischordance
-	script
-	desc Dischordance
+	name Discordance
+	script :discordance:discordance
+	desc Discordance
 	title Bard
 }
 
