--- a/099/pkg/world/moongates/config/itemdesc.cfg
+++ b/099/pkg/world/moongates/config/itemdesc.cfg
@@ -21,7 +21,7 @@ Item 0x16200
 	Facing			29
 
 	Movable			0
-	SaveOnExit		0
+//	SaveOnExit		0
 
 	Script			systemMoonGate/use
 	MethodScript		systemMoonGate/method
