--- a/trunk/099/pkg/npcs/hostiles/diablo/npcdesc.cfg
+++ b/trunk/099/pkg/npcs/hostiles/diablo/npcdesc.cfg
@@ -297,7 +297,7 @@ NpcTemplate abysslord
 {
 	Name			the Lord of the Abyss
 	script		:hostiles:ai_killpcs_normal_spellcaster
-	ObjType		0xA
+	ObjType		0x28
 	Color		1106
 	TrueColor		1106
 	Gender		0
@@ -583,7 +583,7 @@ NpcTemplate hellhound
 {
 	Name			a hell hound
 	script		:hostiles:ai_killpcs_normal_firebreather
-	ObjType		0xe1
+	ObjType		0x61
 	Color		232
 	TrueColor		232
 	Gender		0
