- Changed the CheckSkillWithItem() function to handle skill-level based skill checks properly. - Changed CheckSkill() to have a cap of 140 instead of 120. Also, added the handling of non-equipable item bonuses on skill-level based checks. - Started work on getting magic musical instruments back into the game. - Added support for gargoyles to the barber scripts. - Changed graphics for abbyss lords, hellhounds, royal dragons, ancient dragons, some elementals, cyclops, and titans. - Reworked the bard skills to be difficulty based again. - Discordance skill now lowers the target's barding difficulty on success. Creatures with barding difficulty higher than 120 are capped at 120 for Discordance checks, but the remaining points become a resistance to the debuff applied. - Toy soldiers could not be laminated because of the objtype change. Fixed. - An anvil is now required for all blacksmith activities. - Elven anvils, soulforge anvils and static anvils are now recognized by the SearchForAnvilInArea() function. - Some of the new items added to the routines for magic items. - Changed the core Target function's default flags to NOT check for Line of Sight.

--- a/099/pkg/npcs/hostiles/diablo/npcdesc.cfg
+++ b/099/pkg/npcs/hostiles/diablo/npcdesc.cfg
@@ -297,7 +297,7 @@ NpcTemplate abysslord
 {
 	Name			the Lord of the Abyss
 	script		:hostiles:ai_killpcs_normal_spellcaster
-	ObjType		0xA
+	ObjType		0x28
 	Color		1106
 	TrueColor		1106
 	Gender		0
@@ -583,7 +583,7 @@ NpcTemplate hellhound
 {
 	Name			a hell hound
 	script		:hostiles:ai_killpcs_normal_firebreather
-	ObjType		0xe1
+	ObjType		0x61
 	Color		232
 	TrueColor		232
 	Gender		0
