--- a/099/pkg/npcs/hostiles/dragons/npcdesc.cfg
+++ b/099/pkg/npcs/hostiles/dragons/npcdesc.cfg
@@ -359,7 +359,7 @@ NpcTemplate dragon3
 	Tactics			100
 	Wrestling			120
 
-	provoke			100
+	provoke			120
 	tameskill			119
 	MoveMode			LSA
 	alignment			evil
@@ -398,7 +398,7 @@ NpcTemplate dragon4
 	Tactics			100
 	Wrestling			120
 
-	provoke			100
+	provoke			120
 	tameskill			119
 	MoveMode			LSA
 	alignment			evil
@@ -436,7 +436,7 @@ NpcTemplate greatdragon1
 	Tactics			100
 	Wrestling			120
 
-	provoke			100
+	provoke			120
 	tameskill			119
 	MoveMode			LSA
 	virtue			3
@@ -475,7 +475,7 @@ NpcTemplate greatdragon2
 	Tactics			100
 	Wrestling			120
 
-	provoke			100
+	provoke			120
 	tameskill			119
 	MoveMode			LSA
 	virtue			3
@@ -489,10 +489,10 @@ NpcTemplate royaldragon1
 {
 	Name			<random> the Royal
 	script		:hostiles:ai_killpcs_normal_firebreather
-	ObjType		0xc
-	Color		1201
-	TrueColor		1201
-	colorrange	1201		1247
+	ObjType		0x2e
+	Color		0
+	TrueColor		0
+//	colorrange	1201		1247
 	Gender		0
 	STR			450
 	INT			140
@@ -514,7 +514,7 @@ NpcTemplate royaldragon1
 	Tactics			100
 	Wrestling			140
 
-	provoke			100
+	provoke			130
 	MoveMode			LSA
 	virtue			4
 	alignment			evil
@@ -527,10 +527,10 @@ NpcTemplate royaldragon2
 {
 	Name			<random> the Royal
 	script		:hostiles:ai_killpcs_normal_firebreather
-	ObjType		0x3b
-	Color		1201
-	TrueColor		1201
-	colorrange	2101		2130
+	ObjType		0xac
+	Color		0
+	TrueColor		0
+//	colorrange	2101		2130
 	Gender		0
 	STR			450
 	INT			140
@@ -552,7 +552,7 @@ NpcTemplate royaldragon2
 	Tactics			100
 	Wrestling			140
 
-	provoke			100
+	provoke			130
 	MoveMode			LSA
 	virtue			4
 	alignment			evil
@@ -565,10 +565,10 @@ NpcTemplate ancientdragon1
 {
 	Name			<random> the Ancient
 	script		:hostiles:ai_killpcs_normal_firebreather
-	ObjType		0xc
-	Color		2001
-	TrueColor		2001
-	colorrange	2001		2018
+	ObjType		0xc5
+	Color		0
+	TrueColor		0
+//	colorrange	2001		2018
 	Gender		0
 	STR			600
 	INT			120
@@ -591,7 +591,7 @@ NpcTemplate ancientdragon1
 	Wrestling			160
 
 	alignment			evil
-	provoke			100
+	provoke			140
 	MoveMode			LSA
 	virtue			5
 	hostile			1
@@ -603,10 +603,10 @@ NpcTemplate ancientdragon2
 {
 	Name			<random> the Ancient
 	script		:hostiles:ai_killpcs_normal_firebreather
-	ObjType		0x3b
-	Color		1201
-	TrueColor		1201
-	colorrange	2101		2130
+	ObjType		0xc6
+	Color		0
+	TrueColor		0
+//	colorrange	2101		2130
 	Gender		0
 	STR			600
 	INT			120
@@ -629,7 +629,7 @@ NpcTemplate ancientdragon2
 	Wrestling			160
 
 	alignment			evil
-	provoke			100
+	provoke			140
 	MoveMode			LSA
 	virtue			5
 	hostile			1
@@ -641,10 +641,10 @@ NpcTemplate wyvern
 {
 	Name			a wyvern
 	script		:hostiles:ai_killpcs_normal_default
-	ObjType		0x3c
-	Color		1201
-	TrueColor		1201
-	colorrange	1801		1850
+	ObjType		0x60
+	Color		0
+	TrueColor		0
+//	colorrange	1801		1850
 	Gender		0
 	STR			400
 	INT			65
@@ -782,7 +782,7 @@ NpcTemplate leviathan
 {
 	Name			leviathan
 	script		:hostiles:ai_killpcs_normal_default
-	ObjType		0x5F
+	ObjType		0x4d
 	Color		1335
 	TrueColor		1335
 	Gender		0
