--- a/099/pkg/npcs/hostiles/elementals/npcdesc.cfg
+++ b/099/pkg/npcs/hostiles/elementals/npcdesc.cfg
@@ -514,9 +514,9 @@ NpcTemplate iceelemental
 {
 	Name			an ice elemental
 	script		:hostiles:ai_killpcs_normal_spellcaster
-	ObjType		0x10
-	Color		0x0481
-	TrueColor		0x0481
+	ObjType		0xA1
+	Color		0
+	TrueColor		0
 	Gender		0
 	STR			140
 	INT			95
@@ -559,9 +559,9 @@ NpcTemplate bloodelemental
 {
 	Name			a blood elemental
 	script		:hostiles:ai_killpcs_normal_default
-	ObjType		0x10
-	Color		1645
-	TrueColor		1645
+	ObjType		0xA0
+	Color		0
+	TrueColor		0
 	Gender		0
 	STR			200
 	INT			60
@@ -594,9 +594,9 @@ NpcTemplate poisonelemental
 {
 	Name			a poison elemental
 	script		:hostiles:ai_killpcs_normal_default
-	ObjType		0x23d
-	Color		273
-	TrueColor		273
+	ObjType		0xA2
+	Color		0
+	TrueColor		0
 	Gender		0
 	STR			120
 	INT			40
@@ -736,9 +736,9 @@ NpcTemplate snowmonster
 {
 	Name			a snow monster
 	script		:hostiles:ai_killpcs_normal_default
-	ObjType		0x0e
-	Color		1153
-	TrueColor		1153
+	ObjType		0xA3
+	Color		0
+	TrueColor		0
 	Gender		0
 	STR			170
 	INT			45
@@ -770,7 +770,7 @@ NpcTemplate icefiend
 {
 	Name			<random> the Ice Fiend
 	script		:hostiles:ai_killpcs_normal_spellcaster
-	ObjType		0x09
+	ObjType		0x2b
 	Color		1152
 	TrueColor		1152
 	Gender		0
