--- a/099/pkg/skills/craftingskills/carpentry/menu.cfg
+++ b/099/pkg/skills/craftingskills/carpentry/menu.cfg
@@ -43,7 +43,7 @@ Item shelfmenu
 	Entry	0x0a9b	Bookshelf
 	Entry	0x0a9e	Empty Bookshelf
 	Entry	0x0a9d	Empty Bookshelf
-	Entry	0x28A0	Winerack
+	Entry	0xa05e	Winerack
 }
 
 Item miscfurniture
@@ -60,7 +60,7 @@ Item miscfurniture
 
 Item instruments
 {
-	Entry	0x7067	Flute
+	Entry	0x17067	Flute
 	Entry	0x0e9d	Tamborine
 	Entry	0x0e9e	Tamborine With Ribbon
 	Entry	0x0eb3	Lute
@@ -95,14 +95,14 @@ Item miscmenu
 	Entry	0x104e	Clock Frame
 	Entry	0x0f64	Torch
 	Entry	0x0dbf	Fishing Pole
-	Entry	0x2866	Broom
+	Entry	0xa04a	Broom
 }
 
 Item woodenweapons
 {
 	Entry	0x0e81	Shepherd's Crook
 	Entry	0x0e8a	Quarter Staff
-	Entry	0x7065	Mage Staff
+	Entry	0x17065	Mage Staff
 	Entry	0x13f9	Gnarled Staff
 	Entry	0x0df0	Black Staff
 	Entry	0x13b3	Club
@@ -125,6 +125,8 @@ Item archeryitems
 {
 	Entry	0x1BD4	Shafts
 	Entry	0x13B2	Bow
+	Entry 0x26c2	Composite Bow
 	Entry	0x0f4f	Crossbow
 	Entry	0x13fd	Heavy Crossbow
+	Entry 0x26c3	Repeating Crossbow
 }
