--- a/trunk/099/pkg/skills/craftingskills/carpentry/carpentry.cfg
+++ b/trunk/099/pkg/skills/craftingskills/carpentry/carpentry.cfg
@@ -169,7 +169,7 @@ carpentry 0x0a9e
 	time			5
 }
 
-carpentry 0x28A0
+carpentry 0xA05E
 { 
 	Name			a winerack
 	material		30
@@ -363,7 +363,7 @@ carpentry 0X1f14
 	time			2
 }
 
-carpentry 0x2866
+carpentry 0xa04a
 { 
 	Name			broom
 	material		10
@@ -698,3 +698,22 @@ Element 0x13fd
 	has_quality	1
 	time			7
 }
+
+Element 0x26c2
+{
+	Name			a composite bow
+	Material		15
+	skill		70
+	has_quality	1
+	time			7
+}
+
+Element 0x26c3
+{
+	Name			a repeating crossbow
+	Material		20
+	skill		90
+	has_quality	1
+	time			9
+}
+
