--- a/trunk/099/config/starteqp_garg.cfg
+++ b/trunk/099/config/starteqp_garg.cfg
@@ -25,6 +25,7 @@ ForSkill Inscription
 {
 	Item		Spellbook			1		100
 	Random	Circle1Scrolls		3		100
+	Item		BlankScroll			3		100
 }
 
 ForSkill Magery
@@ -58,7 +59,7 @@ Forskill Mining
 
 Forskill Parrying
 {
-	Item		GargishKiteShield		1		100
+	Item		GargishWoodenShield	1		100
 }
 
 Forskill Lumberjacking
@@ -79,6 +80,7 @@ Forskill Fencing
 
 Forskill Carpentry
 {
+	Item		MouldingPlane		1		100
 	Item		Log				20		100
 }
 
