--- a/trunk/099/pkg/combat/armor/itemdesc.cfg
+++ b/trunk/099/pkg/combat/armor/itemdesc.cfg
@@ -1959,6 +1959,22 @@ Armor 0x27e7
 	unequipscript	:combat:item_unequip
 }
 
+Armor 0x27df
+{
+	Name			clothninjajacket
+	Desc			cloth ninja jacket
+	Coverage		Body
+	Coverage		Arms
+	AR			4
+	MaxHP		75
+	blockcircle	9
+	VendorSellsFor	55
+	VendorBuysFor	11
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
 Armor 0x27e4
 {
 	Name			Kamishimo
