- Replaced many of the PerformAction() calls with NewPerformAction. Many more to go. - Added some new constants to newperformaction.inc. - Enabled damage numbers in combat.cfg. - The menus.cfg file was empty, replaced it with the correct one. - Added blank scrolls to the starting equipment for scribes. - Added the Cloth Ninja Jacket. - Some fixes to the magic item and repair routines to make them have the correct AR. - Adjusted the speed of the small weapons. - Maps were crashing the client when their southern limit was outside the map size. Fixed. - Removed the Paladin Sword from the crafting menu. - Added the gargish cloth items to the IsClothItem() function. - Removed an unimplemented skills from the skill window. - Added functions for identifying armor, shields and weapons made of glass, hides, wood, cloth and stone. - Added all the new shields to their corresponding material identifying functions. - Added function IsMedableArmor() for checking if a piece of armor blocks meditation. - Added all the new clothes to the IsClothing() function - Added the new cloth headwear to the IsAHat() function - Added the new leather footwear to the IsLeatherBoots() function. - Added casting delay and spell interruption to the CheckSuccessfulSpellcast() function - Adjusted the magic item random generation functions to check armor type with IsMedableArmor() instead of IsMetalArmor(). - Elf characters now get elven clothes on creation. - When creating a Necromancer character, the skills are transferred appropriately. - Benson Info page on the web interface now displays count for years 2011 and 2012.

--- a/099/config/starteqp.cfg
+++ b/099/config/starteqp.cfg
@@ -25,6 +25,7 @@ ForSkill Inscription
 {
 	Item		Spellbook			1		100
 	Random	Circle1Scrolls		3		100
+	Item		BlankScroll			3		100
 }
 
 ForSkill Magery
@@ -58,7 +59,7 @@ Forskill Mining
 
 Forskill Parrying
 {
-	Item		KiteShield		1		100
+	Item		WoodenShield		1		100
 }
 
 Forskill Lumberjacking
@@ -79,6 +80,7 @@ Forskill Fencing
 
 Forskill Carpentry
 {
+	Item		MouldingPlane		1		100
 	Item		Log				20		100
 }
 
@@ -108,3 +110,4 @@ ForSkill Archery
 	Item		Bow				1		100
 	Item		Arrow			50		100
 }
+
