--- a/099/config/starteqp_elf.cfg
+++ b/099/config/starteqp_elf.cfg
@@ -25,6 +25,7 @@ ForSkill Inscription
 {
 	Item		Spellbook			1		100
 	Random	Circle1Scrolls		3		100
+	Item		BlankScroll			3		100
 }
 
 ForSkill Magery
@@ -58,7 +59,7 @@ Forskill Mining
 
 Forskill Parrying
 {
-	Item		KiteShield		1		100
+	Item		WoodenShield		1		100
 }
 
 Forskill Lumberjacking
@@ -106,5 +107,5 @@ Forskill Lockpicking
 ForSkill Archery
 {
 	Item		Longbow			1		100
-	Item		Arrow				50		100
+	Item		Arrow			50		100
 }
