--- a/099/pkg/skills/skillmaster.cfg
+++ b/099/pkg/skills/skillmaster.cfg
@@ -406,7 +406,7 @@ skill 49
 {
 	name AOSNecromancy
 	script
-	desc AoSNecromancy
+	desc
 	title Necromancer
 	tradeskill 0
 }
@@ -415,7 +415,7 @@ skill 50
 {
 	name Focus
 	script
-	desc Focus
+	desc
 	title Warrior
 	tradeskill 0
 }
@@ -424,7 +424,7 @@ skill 51
 {
 	name Chivalry
 	script
-	desc Chivalry
+	desc
 	title Paladin
 	tradeskill 0
 }
@@ -433,7 +433,7 @@ skill 52
 {
 	name Bushido
 	script
-	desc Bushido
+	desc
 	title Samurai
 	tradeskill 0
 }
@@ -442,7 +442,7 @@ skill 53
 {
 	name Ninjitsu
 	script
-	desc Ninjitsu
+	desc
 	title Ninja
 	tradeskill 0
 }
@@ -451,7 +451,7 @@ skill 54
 {
 	name Spellweaving
 	script
-	desc Spellweaving
+	desc
 	title Druid
 	tradeskill 0
 }
@@ -460,7 +460,7 @@ skill 55
 {
 	name Mysticism
 	script
-	desc Mysticism
+	desc
 	title Mystic
 	tradeskill 0
 }
@@ -469,7 +469,7 @@ skill 56
 {
 	name Imbuing
 	script :itemid:itemid
-	desc Imbuing
+	desc
 	title Artificer
 	tradeskill 1
 }
