--- a/trunk/099/pkg/skills/craftingskills/blacksmithy/itemdesc.cfg
+++ b/trunk/099/pkg/skills/craftingskills/blacksmithy/itemdesc.cfg
@@ -17,3 +17,32 @@ Item 0x170d0
 	Script			:blacksmithy:bulk_order_deed
 	OldObjtype 0x70d0
 }
+
+Item 0x2804
+{
+	Name			dart
+	Desc			dart%s
+	Weight		1/50
+	VendorSellsFor	5
+}
+
+Item 0x16055
+{
+	Name			firedart
+	Desc			fire dart%s
+	Graphic		0x2804
+	Color		1644
+	Weight		1/50
+	VendorSellsFor	500
+}
+
+Item 0x16056
+{
+	Name			frostdart
+	Desc			frost dart%s
+	Graphic		0x2804
+	Color		1165
+	Weight		1/50
+	VendorSellsFor	500
+}
+
