--- a/trunk/099/regions/regions.cfg
+++ b/trunk/099/regions/regions.cfg
@@ -266,9 +266,17 @@ Region Umbra
 	midi		45
 }
 
+Region TokunoBackground
+{
+	Range		0 0 1447 1447
+	Realm		tokuno
+	Guarded	0
+	midi		49
+}
+
 Region Zento
 {
-	Range		500 1125 965 1360
+	Range		603 1125 880 1360
 	Realm		tokuno
 	EnterText   You have entered the protection of the town guards.
 	LeaveText   You have left the protection of the town guards.
