- Ship hold on galleons now work. - Added the new Throwing Pouch and darts. - Merchant jobs weren't working. Fixed. - Merchant gate destinatins weren't being set correctly. Fixed. - Some minor fixes to an error where a fully repaired armor wouldn't display the full AR. - Maps were crashing the client when a map's southern boundary was outside the realm's southern boundaries. Fixed. - Added support for the new realms to the cartography skill. - Added music for the whole Tokuno realm. - Modified uoconv.bat to properly generate the britannia_alt realm in a High Seas client.

--- a/099/pkg/combat/weapons/itemdesc.cfg
+++ b/099/pkg/combat/weapons/itemdesc.cfg
@@ -1659,6 +1659,33 @@ Weapon 0x27f0
 	hitscript			:weapons:mainhit
 }
 
+Weapon 0x27f5
+{
+	Name				throwingpouch
+	desc				throwing pouch
+	Speed			35
+	Damage			5d6
+	Attribute			Throwing
+	Projectile		1
+	ProjectileType		0x2804
+	ProjectileAnim		0x2804
+	ProjectileSound	0x5d3
+	Anim				0xB
+	MountedAnim		0x1A
+	HitSound			0x23c
+	MissSound			0x5d4
+	MaxHP			150
+	VendorSellsFor		100
+	VendorBuysFor		33
+	blockcircle		1
+	MinRange			0
+	MaxRange			15
+	script			:combat:equipitem
+	equipscript		:combat:item_equip
+	unequipscript		:combat:item_unequip
+	hitscript			:weapons:mainhit
+}
+
 
 ///////////////////////
 // Mondain's Legacy
@@ -1948,7 +1975,7 @@ Weapon 0x4067
 	VendorBuysFor		33
 	blockcircle		1
 	MinRange			0
-	MaxRange			9
+	MaxRange			15
 	script			:combat:equipitem
 	equipscript		:combat:item_equip
 	unequipscript		:combat:item_unequip
@@ -2005,7 +2032,7 @@ Weapon 0x406b
 	Attribute			Throwing
 	Projectile		1
 	ProjectileType		0x406b
-	ProjectileAnim		0x4069
+	ProjectileAnim		0x48d2
 	ProjectileSound	0x5d3
 	Anim				0xB
 	MountedAnim		0x1A
@@ -2031,7 +2058,7 @@ Weapon 0x406c
 	Attribute			Throwing
 	Projectile		1
 	ProjectileType		0x406c
-	ProjectileAnim		0x4069
+	ProjectileAnim		0x48d3
 	ProjectileSound	0x5d3
 	Anim				0xB
 	MountedAnim		0x1A
@@ -2042,7 +2069,7 @@ Weapon 0x406c
 	VendorBuysFor		30
 	blockcircle		1
 	MinRange			0
-	MaxRange			12
+	MaxRange			15
 	script			:combat:equipitem
 	equipscript		:combat:item_equip
 	unequipscript		:combat:item_unequip
