--- a/099/pkg/items/boat/itemdesc.cfg
+++ b/099/pkg/items/boat/itemdesc.cfg
@@ -161,13 +161,15 @@ Container 0x1F013
     Graphic         1
     
     Gump    0x004C
-    MinX    40
-    MaxX    60
+    MinX    20
+    MaxX    80
     MinY    20
     MaxY    80
     RequiresAttention   0
 	MaxItems			65535
 	Maxweight			65535
+	Script		shipstorage
+
 	OldObjType 0xF013
 }
 
@@ -217,19 +219,11 @@ Item 0x1F019
     graphic         1
 }
 
-Container 0x1F01A
+Item 0x1F01A
 {
     Name            Storage
     Graphic         1
-    
-    Gump    0x004C
-    MinX    40
-    MaxX    60
-    MinY    20
-    MaxY    80
-    RequiresAttention   0
-	MaxItems			65535
-	Maxweight			65535
+    Script		shipstorage
 }
 
 Item 0x1F01B
