--- a/099/pkg/magic/spells/druid_spells/npcdesc.cfg
+++ b/099/pkg/magic/spells/druid_spells/npcdesc.cfg
@@ -14,7 +14,7 @@ NpcTemplate summoned_treant_1
 {                                  
 	Name			a treant
 	script		::tamed
-	ObjType		0x2f
+	Objtype		0x11d
 	Color		0
 	TrueColor		0
 	Gender		0
@@ -47,7 +47,7 @@ NpcTemplate summoned_treant_2
 {                                  
 	Name			a treant
 	script		::tamed
-	ObjType		0x2f
+	ObjType		0x11d
 	Color		0
 	TrueColor		0
 	Gender		0
@@ -80,7 +80,7 @@ NpcTemplate summoned_treant_3
 {                                  
 	Name			a treant
 	script		::tamed
-	ObjType		0x2f
+	ObjType		0x11d
 	Color		0
 	TrueColor		0
 	Gender		0
