--- a/099/pkg/npcs/hostiles/overlandmobs/npcdesc.cfg
+++ b/099/pkg/npcs/hostiles/overlandmobs/npcdesc.cfg
@@ -31,7 +31,7 @@ NpcTemplate ent
 {                                  
 	Name			an ent
 	script		:hostiles:ai_killpcs_normal_default
-	ObjType		0x2f
+	ObjType		0x11d
 	Color		0
 	TrueColor		0
 	Gender		0
