--- a/trunk/099/pkg/npcs/townfolk/merchants/mrcspawn.cfg
+++ b/trunk/099/pkg/npcs/townfolk/merchants/mrcspawn.cfg
@@ -409,7 +409,8 @@ ProductGroup    Deeds
 	Item 		0x1622B	1		//twostorylogcabindeed
 	Item 		0x1622C	1		//twostoryvilladeed
 	Item 		0x1622D	1		//largemarblepatiohousedeed
-	Item 		0x16230	100		//foundation18x18deed
+	Item 		0x16230	10		//customthreestoryhousedeed
+	Item 		0x16231	10		//customtwostoryhousedeed
 }
 
 ProductGroup    Circle1Spells
