- Some more additions to the .fixcustomitems dot command. - Houses can now be placed in New Magincia - Added all of the custom houses. - Simplified custom house placements by reducing it to two deeds: one for two story houses, another for three story houses. A gump will be displayed for choosing the actual dimensions and it will make additional charges. - Players now get a refund when demolishing a custom house. - An objtype correction to the giftwrapper script. - Architects now sell custom house deeds. - Minor fix to moongates so they don't show disabled realms. - Players now get charged while they commit their house design. - Added .unlockradius dot command for Seers and GMs.

--- a/099/pkg/npcs/townfolk/merchants/mrcspawn.cfg
+++ b/099/pkg/npcs/townfolk/merchants/mrcspawn.cfg
@@ -409,7 +409,8 @@ ProductGroup    Deeds
 	Item 		0x1622B	1		//twostorylogcabindeed
 	Item 		0x1622C	1		//twostoryvilladeed
 	Item 		0x1622D	1		//largemarblepatiohousedeed
-	Item 		0x16230	100		//foundation18x18deed
+	Item 		0x16230	10		//customthreestoryhousedeed
+	Item 		0x16231	10		//customtwostoryhousedeed
 }
 
 ProductGroup    Circle1Spells
